syntax = "proto2";
package serviceCommon;

message syncOutputRabbit {
    required uint32 lockState = 1;
    required float L1angle = 2;
    required float L1mag = 3;
    required float L2angle = 4;
    required float L2mag = 5;
    required float L3angle = 6;
    required float L3mag = 7;
    required float C1angle = 8;
    required float C1mag = 9;
    required float C2angle = 10;
    required float C2mag = 11;
    required float C3angle = 12;
    required float C3mag = 13;
}

message upmuDataRabbit {
    required uint64 timeStamp = 1;
    required string device = 2;
    required uint32 domainType = 3;
    required uint32 msgType = 4;
    required float sampleInterval = 5;
    required uint32 numSamples = 6;
    repeated syncOutputRabbit sample = 7;
}
    
